Fix the error in h1 tag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body id="home">
 <div id="Header">
 <div class="wrapper">
-	<h1>MINA/h1>
+	<h1>MINA</h1>
 	</div>
 </div>
 <div id="Content" class="wrapper">
