Update New Gulp Process

--- a/d2/index.html
+++ b/d2/index.html
@@ -5,33 +5,19 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>MINA</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
-
-	<!--
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FreeHTML5.co
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
+	<meta name="description" content="MINA: Muslim Information Network of Australia" />
+	<meta name="keywords" content="Muslim Information Network of Australia" />
+	<meta name="author" content="Fareez Ahmed" />
+	<link rel="icon" type="image/png"  href="img/logo.png">
+  <!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="MINA: Muslim Information Network of Australia"/>
+	<meta property="og:image" content="http://mina.org.au/d2/img/mina-logo.png"/>
+	<meta property="og:url" content="http://mina.org.au/"/>
+	<meta property="og:site_name" content="MINA: Muslim Information Network of Australia"/>
 	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
+	<meta name="twitter:title" content="MINA: Muslim Information Network of Australia" />
+	<meta name="twitter:image" content="http://mina.org.au/d2/img/mina-logo.png" />
+	<meta name="twitter:url" content="http://mina.org.au/" />
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
@@ -85,14 +71,15 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-1">
-						<div id="fh5co-logo"><a href="index.html">MINA<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="index.html"><img src="img/mina-logo.png" alt="MINA logo" /></a></div>
 					</div>
 					<div class="col-xs-11 text-right menu-1">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="#">About Us</a></li>
-							<li><a href="#">Projects</a></li>
-							<li class="has-dropdown">
+							<li><a href="about.html">About Us</a></li>
+							<li><a href="project.html">Projects</a></li>
+              <li><a href="event.html">Events</a></li>
+							<!-- <li class="has-dropdown">
 								<a href="blog.html">Events</a>
 								<ul class="dropdown">
 									<li><a href="#">Web Design</a></li>
@@ -100,8 +87,8 @@
 									<li><a href="#">Branding</a></li>
 									<li><a href="#">API</a></li>
 								</ul>
-							</li>
-							<li><a href="#">Photo Gallery</a></li>
+							</li> -->
+							<li><a href="photo-gallery.html">Photo Gallery</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<!-- <li class="btn-cta"><a href="#"><span>Login</span></a></li>
 							<li class="btn-cta"><a href="#"><span>Create a Course</span></a></li> -->
@@ -122,7 +109,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>The Art of Teaching is the Art of Assisting Discovery</h1>
 							<h2>MINA by <a href="#" target="_blank">MINA</a></h2>
-							<!-- <p><a class="btn btn-primary btn-lg btn-learn" href="#">Take A Course</a> <a class="btn btn-primary btn-lg popup-vimeo btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Watch Video</a></p> -->
+							<p> <a class="btn btn-primary btn-lg popup-vimeo btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Watch Video</a></p>
 						</div>
 					</div>
 				</div>
@@ -157,7 +144,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Events</h2>
+					<h2>Projects</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 				</div>
 			</div>
