Complete All components and split all pages

--- a/d2/index.html
+++ b/d2/index.html
@@ -214,7 +214,7 @@
             <div class="container-fluid proj-bottom">
                 <div class="row">
                     <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
-                        <a href="#"><img src="images/project-1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+                        <a href="images/project-1.jpg"><img src="images/project-1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
                             <h3>Web Master</h3>
                             <span>View Course</span>
                         </a>
