--- a/uat/photo.html
+++ b/uat/photo.html
@@ -104,10 +104,46 @@
         </div>
         <div class="container-fluid proj-bottom">
           <div class="row">
-            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a><img class="img-responsive" src="img/project-1.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a></div>
-            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a><img class="img-responsive" src="img/project-2.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a></div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+              <img class="img-responsive" src="img/p1.jpg" alt="">
+                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+              <img class="img-responsive" src="img/p2.jpg" alt="">
+                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+              <img class="img-responsive" src="img/p3.jpg" alt="">
+                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+              <img class="img-responsive" src="img/p4.jpg" alt="">
+                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p5.jpg" alt="">
+                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p6.jpg" alt="">
+                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p7.jpg" alt="">
+                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p8.jpg" alt="">
+                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p9.jpg" alt="">
+                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+              <img class="img-responsive" src="img/p10.jpg" alt="">
+                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+            </div>
           </div>
         </div>
         <div class="container">
