Update Photo's and Bg

--- a/uat/index.html
+++ b/uat/index.html
@@ -133,10 +133,18 @@
         </div>
         <div class="container-fluid proj-bottom">
           <div class="row">
-            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a><img class="img-responsive" src="img/project-1.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a></div>
-            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a><img class="img-responsive" src="img/project-2.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a></div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+              <img class="img-responsive" src="img/p1.jpg" alt="">
+                <h3>Eid al-Fitr</h3><span>Biryani Getting ready to be served</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p8.jpg" alt="">
+                <h3>Dawah Gathering</h3><span>Quran Recitation</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+              <img class="img-responsive" src="img/p4.jpg" alt="">
+                <h3>Eid al-Adha</h3><span>Quran Recitation</span></a>
+            </div>
           </div>
         </div>
         <div class="container">
@@ -171,7 +179,7 @@
                 <div class="owl-carousel owl-carousel-fullwidth">
                   <div class="item">
                     <div class="testimony-slide active text-center">
-                      <figure><img src="" alt="user"></figure><span> Noor Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
+                      <figure><img src="img/iqbal.png" alt="user"></figure><span> Iqbal Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
                       <blockquote>
                         <p>&ldquo;&rdquo;</p>
                       </blockquote>
@@ -179,7 +187,7 @@
                   </div>
                   <div class="item">
                     <div class="testimony-slide active text-center">
-                      <figure><img src="" alt="user"></figure><span> Ansari Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
+                      <figure><img src="img/fois.png" alt="user"></figure><span> Fois Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
                       <blockquote>
                         <p>&ldquo;&rdquo;</p>
                       </blockquote>
@@ -187,7 +195,7 @@
                   </div>
                   <div class="item">
                     <div class="testimony-slide active text-center">
-                      <figure><img src="" alt="user"></figure><span> Moshin Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
+                      <figure><img src="img/mujib.png" alt="user"></figure><span> Mujab Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
                       <blockquote>
                         <p>&ldquo;&rdquo;</p>
                       </blockquote>
