--- a/uat/photo.html
+++ b/uat/photo.html
@@ -106,43 +106,55 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
               <img class="img-responsive" src="img/p1.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+                <h3>Eid al-Fitr</h3><span>Biryani Getting ready to be served</span></a>
             </div>
             <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
               <img class="img-responsive" src="img/p2.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a>
-            </div>
-            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
-              <img class="img-responsive" src="img/p3.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a>
-            </div>
-            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
-              <img class="img-responsive" src="img/p4.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a>
-            </div>
-            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
-                <img class="img-responsive" src="img/p5.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a>
-            </div>
-            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
-                <img class="img-responsive" src="img/p6.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a>
-            </div>
-            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
-                <img class="img-responsive" src="img/p7.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+                <h3>Eid al-Fitr</h3><span>Eid Lunch</span></a>
             </div>
             <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
                 <img class="img-responsive" src="img/p8.jpg" alt="">
-                <h3>MINA Football</h3><span>MINA Football with members</span></a>
+                <h3>Dawah Gathering</h3><span>Quran Recitation</span></a>
             </div>
-            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+            <!-- <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
                 <img class="img-responsive" src="img/p9.jpg" alt="">
                 <h3>MINA Football</h3><span>MINA Football with members</span></a>
-            </div>
+            </div> -->
             <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
               <img class="img-responsive" src="img/p10.jpg" alt="">
+                <h3>Dawah Gathering</h3><span>Cheif Guest</span></a>
+            </div>
+            <!-- <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+              <img class="img-responsive" src="img/p3.jpg" alt="">
                 <h3>MINA Football</h3><span>MINA Football with members</span></a>
+            </div> -->
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+              <img class="img-responsive" src="img/p4.jpg" alt="">
+                <h3>Eid al-Adha</h3><span>Quran Recitation</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p5.jpg" alt="">
+                <h3>Eid al-Adha</h3><span>Eid Dinner</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p6.jpg" alt="">
+                <h3>Eid al-Adha</h3><span>Sweat Treat</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p7.jpg" alt="">
+                <h3>Eid al-Adha</h3><span>Eid Dinner</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p11.jpg" alt="">
+                <h3>Youth Section</h3><span>Rising Stars</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p12.jpg" alt="">
+                <h3>Team Outing</h3><span>Sweat Treat</span></a>
+            </div>
+            <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
+                <img class="img-responsive" src="img/p13.jpg" alt="">
+                <h3>Team Outing</h3><span>Eid Dinner</span></a>
             </div>
           </div>
         </div>
